Fixed overflow bug

--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -7,3 +7,4 @@ body
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
   height: 3000px
+  overflow-x: hidden
