--- a/assets/css/4-pages/_marque.sass
+++ b/assets/css/4-pages/_marque.sass
@@ -12,3 +12,12 @@
             display: inline-block
             padding-left: 10%
             padding-right: 10%
+            
+@media (max-width: 800px)
+    .container
+        width: 100%
+        float: left
+        
+        .icon, .icon2, .icon3
+            display: inline-block
+            padding: 0 auto
