--- a/assets/css/4-pages/_rules.sass
+++ b/assets/css/4-pages/_rules.sass
@@ -86,4 +86,27 @@
         margin-left: 10%
         background-color: green
         
+@media (max-width: 800px)
+    .rules
+        width: 100%
         
+        .rules-head
+            width: 100%
+            margin: 0 auto
+            margin-left: 15%
+            float: left
+            
+        .rules-body
+            width: 100%
+            float: left
+            margin-left: 15%
+            
+        .colour-head
+            width: 100%
+            margin-left: 15%
+            
+        .type-head
+            width: 100%
+            float: left
+            background: green
+    
