--- a/assets/css/4-pages/_type.sass
+++ b/assets/css/4-pages/_type.sass
@@ -33,4 +33,13 @@
     
     .wordmark-end
         margin-top: 10%
+        
+        
+
+@media (max-width: 800px)
+    .typography
+        width: auto
+        
+        .type-head
+            width: 100%
     
